# django_blog

./: data.json  mysite_data.json  pyproject.toml
blog/: admin.py  feeds.py  models.py  urls.py  views.py
blog/templatetags/: blog_tags.py
config/: settings.py  urls.py
templates/blog/: base.html
templates/blog/posts/: comment.html  detail.html  list.html  share.html
