[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["Roman Popov <i@romanpopoff.ru>"]
readme = "README.md"
packages = [{include = "django_blog"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
python-dotenv = "^1.0.0"
django-taggit = "3.0.0"
markdown = "3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
